# four-eyes-prototype

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app/: config.yaml  horoscope.py  image_processing.py  logic.py
img/: georgia-okeefe.avif
