[tool.poetry]
name = "prj-four-eyes-prototype"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
pytesseract = "^0.3.10"
opencv-python = "^4.9.0.80"
python-dotenv = "^1.0.1"
openai = "^1.12.0"
pyyaml = "^6.0.1"
inflect = "^7.0.0"


[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"


[tool.poetry.group.scraper.dependencies]
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
